--- a/tools/gromacs/.shed.yml
+++ b/tools/gromacs/.shed.yml
@@ -9,7 +9,7 @@ remote_repository_url: https://github.com/galaxycomputationalchemistry/galaxy-to
 type: unrestricted
 categories:
 - Molecular Dynamics
-- Computational Chemistry
+- Computational chemistry
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Wrapper for the gromacs package: {{ tool_name }}"
