--- a/tools/biomoldyn/.shed.yml
+++ b/tools/biomoldyn/.shed.yml
@@ -1,9 +1,9 @@
 name: biomoldyn
 owner: chemteam
-description: "Tools developed by the Biomolecular Dynamics group at the University of Freiburg"
+description: "Tools for MD analysis"
 homepage_url: https://github.com/moldyn/
 long_description: |
-    Tools developed by the Biomolecular Dynamics group (https://github.com/moldyn/) at the University of Freiburg, including dimensionality reduction, clustering, Langevin simulations and dcTMD
+    Tools for MD analysis developed by the Biomolecular Dynamics group (https://github.com/moldyn/) at the University of Freiburg, including dimensionality reduction, clustering, Langevin simulations and dcTMD
 remote_repository_url: https://github.com/galaxycomputationalchemistry/galaxy-tools-compchem/
 type: unrestricted
 categories:
