--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # 'sudo required' will give us 7,5 GB memory, but has slower startup times, as we start a VM instead of a Container
 sudo: required
 language: python
-##cache: pip
+cache: pip
 
 python: 2.7
 
@@ -73,7 +73,7 @@ jobs:
 
 before_install:
   - export GALAXY_REPO=https://github.com/galaxyproject/galaxy
-  - export GALAXY_RELEASE=release_20.05
+  - export GALAXY_RELEASE=release_20.01
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
   - unset JAVA_HOME
 
@@ -81,7 +81,7 @@ install:
   - pip install planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-  ##- conda install -y -c conda-forge conda=4.3.34 
+  - conda install -y -c conda-forge conda=4.3.34 
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
