add maintainers to .shed.yml files

--- a/tools/biomoldyn/.shed.yml
+++ b/tools/biomoldyn/.shed.yml
@@ -12,3 +12,5 @@ categories:
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Wrapper for the package: {{ tool_name }}"
+maintainers:
+  - simonbray
