--- a/tools/gromacs/.shed.yml
+++ b/tools/gromacs/.shed.yml
@@ -14,3 +14,5 @@ categories:
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Wrapper for the gromacs package: {{ tool_name }}"
+maintainers:
+  - simonbray
