--- a/tools/mdfileconverter/.shed.yml
+++ b/tools/mdfileconverter/.shed.yml
@@ -8,3 +8,6 @@ type: unrestricted
 categories:
   - Molecular Dynamics
   - Computational chemistry
+maintainers:
+  - chrisbarnettster
+  - tsenapathi
