--- a/tools/mdtraj/.shed.yml
+++ b/tools/mdtraj/.shed.yml
@@ -16,3 +16,7 @@ suite:
   description: "MDTraj is a python library that allows users to manipulate molecular dynamics (MD) trajectories"
   long_description: |
     MDTraj is a python library that allows users to manipulate molecular dynamics (MD) trajectories. Features include, Wide MD format support, including pdb, xtc, trr, dcd, binpos, netcdf, mdcrd, prmtop, and more. Extremely fast RMSD calculations (4x the speed of the original Theobald QCP). Extensive analysis functions including those that compute bonds, angles, dihedrals, hydrogen bonds, secondary structure, and NMR observables. Lightweight, Pythonic API.
+maintainers:
+  - chrisbarnettster
+  - tsenapathi
+  - simonbray
