--- a/tools/buildtools/topologyeditors/.shed.yml
+++ b/tools/buildtools/topologyeditors/.shed.yml
@@ -1,6 +1,6 @@
 name: topologyeditors
 owner: chemteam
-description: "Set of python scripts and associated tool files that can be used to modify topology files.
+description: "Set of python scripts and associated tool files that can be used to modify topology files."
 long_description: |
     This is a set of python scripts and associated tool files that can be used to modify topology files, specially those generated outside of GROMACS, so that they are ready for molecular dynamics (MD) simulations and analyzing trajectories.
 remote_repository_url: https://github.com/galaxycomputationalchemistry/galaxy-tools-compchem/tree/master/tools/buildtools/topologyeditors
